--- a/languages/myanmar.css
+++ b/languages/myanmar.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'NotoSansMyanmar';
-  src: url(NotoSansMyanmar/NotoSansMyanmar-Regular.ttf);
+  src: url(../fonts/NotoSansMyanmar/NotoSansMyanmar-Regular.ttf);
 }
 
 @font-face {
   font-family: 'Zawgyi One';
-  src: url(ZawgyiOne/ZawgyiOne2008.ttf);
+  src: url(../fonts/ZawgyiOne/ZawgyiOne2008.ttf);
 }
 
 html, body, span, strong {
